--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -25,12 +25,13 @@ network = VisualizationA
 *.visualizer.osgVisualizer.sceneVisualizer.axisLength = 100m
 
 
+######################################################################################################
 [Config Visualization02]	# Adding static 3D objects to the scene	# under construction	# under construction
 extends = Visualization01
 description = Adding static 3D objects to the scene
-#########################
 
 
+######################################################################################################
 [Config Visualization03]	# Displaying communiation/interference range
 extends = Visualization02
 description = Displaying communication & interference range
@@ -47,6 +48,7 @@ network = VisualizationB
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = true
 
 
+######################################################################################################
 [Config Visualization04]	# Using 3D models for network nodes
 extends = Visualization03
 description = Using 3D models for network nodes
@@ -55,11 +57,11 @@ description = Using 3D models for network nodes
 
 # VISUALIZER
 # change phone to a boxman
-# external 3D animated osg model, I take it from "inet/examples/visualization/networknode/" folder
-*.pedestrian0.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot" 
+*.pedestrian0.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
 *.pedestrian1.osgModel = "boxman.osgb.(0.06).scale.0,0,90.rot"
 
 
+######################################################################################################
 [Config Visualization05]	# Displaying recent movement and orientation
 extends = Visualization04
 description = Displaying recent movement
@@ -94,7 +96,7 @@ description = Displaying recent movement
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
 
 # accessPoint0 mobility
-*.accessPoint*.mobilityType = "StationaryMobility"		# default, can be omitted
+*.accessPoint*.mobilityType = "StationaryMobility"
 *.accessPoint*.mobility.coordinateSystemModule = "coordinateSystem"
 *.accessPoint0.mobility.initialLatitude = 42.3542933deg
 *.accessPoint0.mobility.initialLongitude = -71.0663985deg
@@ -106,6 +108,7 @@ description = Displaying recent movement
 *.visualizer.*.mobilityVisualizer.displayMovementTrail = true
 
 
+######################################################################################################
 [Config Visualization06]	# Showing IP addresses
 extends = Visualization05
 description = Showing IP addresses
@@ -118,6 +121,7 @@ description = Showing IP addresses
 *.visualizer.*.interfaceTableVisualizer.interfaceFilter = "wlan*"
 
 
+######################################################################################################
 [Config Visualization07]	# Showing wifi association
 extends = Visualization06
 description = Showing wifi association
