--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -1,7 +1,7 @@
 [General]
 tkenv-plugin-path = ../../../etc/plugins
 debug-on-errors = true
-record-eventlog = true
+record-eventlog = false
 
 
 [Config Visualization01]	# Showing Boston downtown
@@ -46,6 +46,8 @@ network = VisualizationB
 # display communication and interface ranges
 *.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = true
+*.visualizer.*.mediumVisualizer.interferenceRangeColor = "black"
+
 
 
 ######################################################################################################
@@ -84,13 +86,13 @@ description = Displaying recent movement
 *.pedestrian0.mobility.initialY = 65m
 *.pedestrian0.mobility.constraintAreaMinX = 390m
 *.pedestrian0.mobility.constraintAreaMinY = 63m
-*.pedestrian0.mobility.constraintAreaMaxX = 400m
+*.pedestrian0.mobility.constraintAreaMaxX = 440m
 *.pedestrian0.mobility.constraintAreaMaxY = 230m
 
 # pedestrian1 mobility
 *.pedestrian1.mobility.initialX = 600m
 *.pedestrian1.mobility.initialY = 90m
-*.pedestrian1.mobility.constraintAreaMinX = 595m
+*.pedestrian1.mobility.constraintAreaMinX = 555m
 *.pedestrian1.mobility.constraintAreaMinY = 90m
 *.pedestrian1.mobility.constraintAreaMaxX = 605m
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
@@ -106,6 +108,7 @@ description = Displaying recent movement
 # show movements
 *.visualizer.*.mobilityVisualizer.displayVelocity = true
 *.visualizer.*.mobilityVisualizer.displayMovementTrail = true
+*.visualizer.*.mobilityVisualizer.movementTrailLineColor = "black"
 
 
 ######################################################################################################
@@ -119,6 +122,8 @@ description = Showing IP addresses
 # show pedestrians' wlan ip addresses
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = "*.pedestrian*"
 *.visualizer.*.interfaceTableVisualizer.interfaceFilter = "wlan*"
+*.visualizer.*.interfaceTableVisualizer.backgroundColor = "white"
+*.visualizer.*.interfaceTableVisualizer.opacity = 0.8
 
 
 ######################################################################################################
@@ -152,7 +157,7 @@ description = Displaying transmissions & receptions
 *.pedestrian0.udpApp[0].destPort = 5000
 # can be changed or can be omitted
 *.pedestrian0.udpApp[0].startTime = 1s
-*.pedestrian0.udpApp[0].stopTime = 31s
+#*.pedestrian0.udpApp[0].stopTime = 31s
 
 # voip receiver
 *.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
@@ -162,8 +167,8 @@ description = Displaying transmissions & receptions
 # VISUALIZER
 # display transmissions & receptions
 *.visualizer.*.mediumVisualizer.displayTransmissions = true
-*.visualizer.*.mediumVisualizer.displayReceptions = true
 *.visualizer.*.mediumVisualizer.transmissionImage = "transmission.png"
+*.visualizer.*.mediumVisualizer.displayReceptions = true
 *.visualizer.*.mediumVisualizer.receptionImage = "reception.png"
 
 
@@ -174,6 +179,9 @@ description = Showing propagating signals
 # PARAMETERS
 
 # VISUALIZER
+# turn off ieee802.11 visualizer
+*.visualizer.*.ieee80211Visualizer.nodeFilter = ""
+
 # show propagating signals
 *.visualizer.*.mediumVisualizer.displaySignals = true
 *.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 50ns
@@ -191,6 +199,11 @@ description = Showing active physical links
 # VISUALIZER
 # display physical links
 *.visualizer.*.physicalLinkVisualizer.packetNameFilter = "*"
+*.visualizer.*.physicalLinkVisualizer.lineColor = "purple"
+*.visualizer.*.physicalLinkVisualizer.lineStyle = "solid"
+*.visualizer.*.physicalLinkVisualizer.lineWidth = 4
+*.visualizer.*.physicalLinkVisualizer.fadeOutHalfLife = 5s
+
 
 
 [Config Visualization11]	# Showing active data links
@@ -205,6 +218,10 @@ description = Showing active data links
 
 # show VoIP data links
 *.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
+*.visualizer.*.dataLinkVisualizer.lineColor = "green"
+*.visualizer.*.dataLinkVisualizer.lineStyle = "solid"
+*.visualizer.*.dataLinkVisualizer.lineWidth = 4
+*.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 5s
 
 
 [Config Visualization12]	# Displaying playout delay statistic
@@ -214,14 +231,12 @@ description = Displaying playout delay statistics
 # PARAMETERS
 
 # VISUALIZER
-# turn off ieee802.11 visualizer?
-*.visualizer.*.ieee80211Visualizer.nodeFilter = ""
-
 # display playout delay statistic
 *.visualizer.*.statisticVisualizer.signalName = "VoIPPlayoutDelay"
 *.visualizer.*.statisticVisualizer.statisticName = "playoutDelay"
 *.visualizer.*.statisticVisualizer.prefix = "Playout delay"
 *.visualizer.*.statisticVisualizer.unit = "s ms"
+*.visualizer.*.statisticVisualizer.opacity = 0.8
 *.visualizer.*.statisticVisualizer.sourcePathFilter = "**.udpApp[0]"
 
 
@@ -268,7 +283,7 @@ network = VisualizationC
 *.pedestrianVideo.udpApp[0].serverAddress = "videoStreamServer"
 *.pedestrianVideo.udpApp[0].serverPort = 4000
 # can be changed or can be omitted
-*.pedestrianVideo.udpApp[0].startTime = 25s
+*.pedestrianVideo.udpApp[0].startTime = 5s
 
 # VISUALIZER
 # turn off communication and interface ranges
@@ -278,9 +293,11 @@ network = VisualizationC
 # change displaying VoIP data links to displaying Videostream data links
 *.visualizer.*.dataLinkVisualizer.packetNameFilter = "*Video*"
 
-# routing table visualizer: router0 all routing table entries
-*.visualizer.*.routingTableVisualizer.subscriptionModule = "router0"
-*.visualizer.*.routingTableVisualizer.destinationFilter = "**"
+# routing table visualizer: routing table entries to videoStreamServer
+*.visualizer.*.routingTableVisualizer.subscriptionModule = ""
+*.visualizer.*.routingTableVisualizer.destinationFilter = "*.videoStreamServer"
+*.visualizer.*.routingTableVisualizer.lineColor = "brown"
+*.visualizer.*.routingTableVisualizer.lineStyle = "solid"
 
 
 [Config Visualization14]	# Displaying 802.11 channel access state
@@ -290,6 +307,10 @@ description = Displaying 802.11 channel access state
 # PARAMETERS
 
 # VISUALIZER
+# turn off routing table
+*.visualizer.*.routingTableVisualizer.subscriptionModule = ""
+*.visualizer.*.routingTableVisualizer.destinationFilter = ""
+
 # turn off transmissions & receptions
 *.visualizer.*.mediumVisualizer.displayTransmissions = false
 *.visualizer.*.mediumVisualizer.displayReceptions = false
@@ -297,9 +318,6 @@ description = Displaying 802.11 channel access state
 # turn off statistic visualizer
 *.visualizer.*.statisticVisualizer.signalName = ""
 *.visualizer.*.statisticVisualizer.statisticName = ""
-
-# turn on ieee802.11 visualizer
-*.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 
 # info visualizer parameters: shows channel access state
 *.visualizer.*.infoVisualizer.modules = "*.*.wlan[0].mac.ctn[0]"
@@ -330,7 +348,7 @@ network = VisualizationD
 # pedestrian1 mobility. Changed because we placed a new access point
 *.pedestrian1.mobility.initialX = 615m
 *.pedestrian1.mobility.initialY = 115m
-*.pedestrian1.mobility.constraintAreaMinX = 615m
+*.pedestrian1.mobility.constraintAreaMinX = 595m
 *.pedestrian1.mobility.constraintAreaMinY = 110m
 *.pedestrian1.mobility.constraintAreaMaxX = 620m
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
@@ -369,15 +387,11 @@ network = VisualizationD
 *.pedestrian1.wlan[0].agent.default_ssid = "inetwifi1"
 
 # VISUALIZER
-# turn off routing table
-*.visualizer.*.routingTableVisualizer.subscriptionModule = ""
-*.visualizer.*.routingTableVisualizer.destinationFilter = ""
-
 # turn off channel access state
 *.visualizer.*.infoVisualizer.modules = ""
 
 # turn on ieee802.11 visualizer: hogy lassam, hogy ki melyik ap-hoz kapcsolodott
-*.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
+#*.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 
 # show pedestrians' wlan ip addresses
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = "**"
@@ -387,7 +401,11 @@ network = VisualizationD
 *.visualizer.*.dataLinkVisualizer.packetNameFilter = ""
 
 # turn on network routes
-*.visualizer.*.networkRouteVisualizer.packetNameFilter = "*Video*"
+*.visualizer.*.networkRouteVisualizer.packetNameFilter = "Video*"
+*.visualizer.*.networkRouteVisualizer.lineColor = "red"
+*.visualizer.*.networkRouteVisualizer.lineStyle = "solid"
+*.visualizer.*.networkRouteVisualizer.lineWidth = 4
+*.visualizer.*.networkRouteVisualizer.fadeOutHalfLife = 8s
 
 
 [Config Visualization16]	# Displaying physical environment
@@ -434,7 +452,7 @@ network = VisualizationF
 
 # car appearance
 *.car[*].osgModel = "car.osgb.20.scale"
-*.car[*].osgModelColor = "#FF0000"
+*.car[*].osgModelColor = "red"
 
 # car wlan communication range parameter
 *.car[*].wlan[*].radio.transmitter.power = 0.7mW
@@ -444,7 +462,6 @@ network = VisualizationF
 *.car[*].mobility.coordinateSystemModule = "coordinateSystem"
 *.car[*].mobility.updateInterval = 100ms
 *.car[0].mobility.waypointFile = "waypoint1.txt"
-#*.car[1].mobility.waypointFile = "waypoint2.txt"
 *.car[*].mobility.waypointProximity = 4m
 *.car[*].mobility.speed = 12mps
 
@@ -461,7 +478,7 @@ network = VisualizationF
 *.car[*].udpApp[2].localPort = 3000
 *.car[*].udpApp[2].serverAddress = "videoStreamServer"
 *.car[*].udpApp[2].serverPort = 3000
-*.car[*].udpApp[2].startTime = 22s
+*.car[*].udpApp[2].startTime = 18s
 
 *.car[*].wlan[*].agent.default_ssid = ""
 
@@ -518,19 +535,26 @@ network = VisualizationF
 *.tcpHost[*].mobility.coordinateSystemModule = "coordinateSystem"
 *.tcpHost[*].mobility.initialAltitude = 0.5m
 
-*.tcpHost[1].mobility.initialLatitude = 42.35332deg
-*.tcpHost[1].mobility.initialLongitude = -71.06455deg
-
 *.tcpHost[0].mobility.initialLatitude = 42.35552deg
 *.tcpHost[0].mobility.initialLongitude = -71.06399deg
+
+*.tcpHost[1].mobility.initialLatitude = 42.35332deg
+*.tcpHost[1].mobility.initialLongitude = -71.06455deg
 
 # VISUALIZER
 # turn off propagating signals, because it makes the simulation slow
 *.visualizer.*.mediumVisualizer.displaySignals = false
 *.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 0s
 
+# obstacle loss visualizer: shows obstacle loss
+*.visualizer.*.obstacleLossVisualizer.displayIntersectionTrail = false
+*.visualizer.*.obstacleLossVisualizer.displayFaceNormalVectorTrail = false
+
 # visualizer parameters
 *.visualizer.*.packetDropVisualizer.packetNameFilter = "**"
+*.visualizer.*.packetDropVisualizer.iconTintColor = "red"
+*.visualizer.*.packetDropVisualizer.iconTintAmount = 1
+*.visualizer.*.packetDropVisualizer.fadeOutHalfLife = 4s
 
 
 [Config Visualization19]	# Displaying transport connections
@@ -555,11 +579,12 @@ description = Showing link breaks
 # PARAMETERS
 # videoStreamServer
 # makes the simulation faster. If all devices works, maybe turn it on
-**.tcpHost[0].tcpApp[0].tClose = 0.07s
+**.tcpHost[0].tcpApp[0].tClose = 0.03s
 
 # VISUALIZER
 # link break visualizer parameters
 *.visualizer.*.linkBreakVisualizer.nodeFilter = "**"
+*.visualizer.*.linkBreakVisualizer.fadeOutHalfLife = 4s
 
 
 [Config Visualization21]	# Visualizing handovers
@@ -578,10 +603,6 @@ description = Displaying changing routes
 # PARAMETERS
 
 # VISUALIZER
-# turn on Video network routes
-*.visualizer.*.networkRouteVisualizer.packetNameFilter = "*Video*"
-*.visualizer.*.networkRouteVisualizer.lineColor = "#FF0000"
-
 # show VoIP data links
 *.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
 
