Dhcp Example: fingerprint OK with this configuration.

--- a/examples/dhcp/omnetpp.ini
+++ b/examples/dhcp/omnetpp.ini
@@ -1,7 +1,13 @@
 [General]
 tkenv-plugin-path = ../../../etc/plugins
 record-eventlog = true
-sim-time-limit = 100d
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 500s
+# for validation
 
 [Config WiredDHCP]
 description = Hosts configured via DHCP
@@ -42,8 +48,10 @@ network = WirelessNetWithDHCP
 **.client[*].pingApp[0].destAddr = "remote"
 **.client[*].pingApp[0].startTime = 3s
 #for validation
-**.client[*].wlan[*].mac.qosStation = false
-**.ap.wlan[*].mac.qosStation = false
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 54Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
 #for validation
 
 # DHCP server for the wireless network 
