Crosstalk example: fingerprint OK with this configuration.

--- a/examples/wireless/crosstalk/omnetpp.ini
+++ b/examples/wireless/crosstalk/omnetpp.ini
@@ -1,9 +1,15 @@
 [General]
 network = Crosstalk
 tkenv-plugin-path = ../../../etc/plugins
-#record-eventlog = true
-sim-time-limit = 0.1s
 seed-set = 1
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 2s
+record-eventlog = true
+# for validation
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -39,3 +45,11 @@ seed-set = 1
 *.*Node[*].wlan[*].radio.transmitter.dimensions = "time frequency"
 *.aNode[*].wlan[*].radio.channelNumber = 1
 *.bNode[*].wlan[*].radio.channelNumber = ${channelNumber=2..10}
+
+#mac
+#for validation
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#for validation
