Example wireless/Dynamic: fingerpint OK with this configuration.

--- a/examples/wireless/dynamic/omnetpp.ini
+++ b/examples/wireless/dynamic/omnetpp.ini
@@ -1,8 +1,14 @@
 [General]
 network = DynamicRadioNetwork
 tkenv-plugin-path = ../../../etc/plugins
-#record-eventlog = true
-#debug-on-errors = true
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 100s
+record-eventlog = true
+# for validation
 
 *.scenarioManager.script = xmldoc("scenario.xml")
 **.autoConfigurator.interfaces = "wlan0"
@@ -23,3 +29,11 @@ tkenv-plugin-path = ../../../etc/plugins
 **.sourceNode[*].numPingApps = 1
 **.sourceNode[*].pingApp[*].destAddr = "destinationNode"
 **.pingApp[*].printPing = true
+
+#for validation
+num-rngs = 5
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#for validation
