Example wireless/power: fingerprint OK with this configuration.

--- a/examples/wireless/power/omnetpp.ini
+++ b/examples/wireless/power/omnetpp.ini
@@ -1,8 +1,14 @@
 [General]
 network = PowerNetwork
 tkenv-plugin-path = ../../../etc/plugins
-sim-time-limit = 100s
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
 cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 100s
+record-eventlog = true
+# for validation
 
 **.numHost = 20
 
@@ -38,3 +44,10 @@ cmdenv-express-mode = false
 *.host[*].numPingApps = 1
 *.host[*].pingApp[0].destAddr = "host[0]"
 *.host[*].pingApp[0].printPing = true
+
+#for validation
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#for validation 
