Example wireless/multiradio: fingerprint OK with this configuration

--- a/examples/wireless/multiradio/omnetpp.ini
+++ b/examples/wireless/multiradio/omnetpp.ini
@@ -1,8 +1,14 @@
 [General]
 network = MultiRadio
+# for validation
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 100s
 #record-eventlog = true
+# for validation
 
-#debug-on-errors = true
 tkenv-plugin-path = ../../../etc/plugins
 
 # mobility
@@ -52,7 +58,12 @@ tkenv-plugin-path = ../../../etc/plugins
 *.accessPoint*.**.mgmtType = "Ieee80211MgmtAPSimplified"
 
 # global data rates
-**.wlan*.bitrate = 11Mbps
+#for validation
+**.wlan[*].*.dataBitrate = 54Mbps
+**.wlan[*].*.basicBitrate = 24Mbps
+**.wlan[*].*.multicastBitrate = 24Mbps
+**.wlan[*].*.controlBitrate = 1Mbps
+#for validation
 
 # application level: host1 pings host2
 **.numPingApps = 1
