update TODO, update timers

--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -45,8 +45,9 @@ network = VisualizationB
 # VISUALIZER
 # display communication and interface ranges
 *.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
+*.visualizer.*.mediumVisualizer.communicationRangeColor = "red"			# 3d-ben nem mukodik
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = true
-*.visualizer.*.mediumVisualizer.interferenceRangeColor = "black"
+*.visualizer.*.mediumVisualizer.interferenceRangeColor = "black"			# 3d-ben nem mukodik
 
 
 
@@ -108,6 +109,7 @@ description = Displaying recent movement
 # show movements
 *.visualizer.*.mobilityVisualizer.displayVelocity = true
 *.visualizer.*.mobilityVisualizer.velocityLineWidth = 2
+
 *.visualizer.*.mobilityVisualizer.displayMovementTrail = true
 *.visualizer.*.mobilityVisualizer.movementTrailLineWidth = 2
 
@@ -123,7 +125,7 @@ description = Showing IP addresses
 # show pedestrians' wlan ip addresses
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = "*.pedestrian*"
 *.visualizer.*.interfaceTableVisualizer.interfaceFilter = "wlan*"
-*.visualizer.*.interfaceTableVisualizer.backgroundColor = "white"
+*.visualizer.*.interfaceTableVisualizer.backgroundColor = "yellow"
 *.visualizer.*.interfaceTableVisualizer.fontColor = "black"
 *.visualizer.*.interfaceTableVisualizer.opacity = 1
 
@@ -136,11 +138,9 @@ description = Showing wifi association
 # PARAMETERS
 
 # VISUALIZER
-# turn off ip addresses
-*.visualizer.*.interfaceTableVisualizer.nodeFilter = ""
-
 # show wifi association
 *.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
+*.visualizer.*.ieee80211Visualizer.interfaceFilter = "wlan*"
 
 
 [Config Visualization08]	# Displaying transmissions & receptions
@@ -159,7 +159,7 @@ description = Displaying transmissions & receptions
 *.pedestrian0.udpApp[0].destPort = 5000
 # can be changed or can be omitted
 *.pedestrian0.udpApp[0].startTime = 1s
-#*.pedestrian0.udpApp[0].stopTime = 31s
+*.pedestrian0.udpApp[0].stopTime = 31s
 
 # voip receiver
 *.pedestrian1.udpApp[0].typename = "SimpleVoIPReceiver"
@@ -181,9 +181,6 @@ description = Showing propagating signals
 # PARAMETERS
 
 # VISUALIZER
-# turn off ieee802.11 visualizer
-*.visualizer.*.ieee80211Visualizer.nodeFilter = ""
-
 # show propagating signals
 *.visualizer.*.mediumVisualizer.displaySignals = true
 *.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 50ns
@@ -199,12 +196,16 @@ description = Showing active physical links
 # PARAMETERS
 
 # VISUALIZER
+# turn off velocity
+*.visualizer.*.mobilityVisualizer.displayVelocity = false
+
 # display physical links
-*.visualizer.*.physicalLinkVisualizer.packetNameFilter = "*"
+*.visualizer.*.physicalLinkVisualizer.packetNameFilter = "*VoIP*"
 *.visualizer.*.physicalLinkVisualizer.lineColor = "purple"
 *.visualizer.*.physicalLinkVisualizer.lineStyle = "solid"
 *.visualizer.*.physicalLinkVisualizer.lineWidth = 4
-*.visualizer.*.physicalLinkVisualizer.fadeOutHalfLife = 5s
+*.visualizer.*.physicalLinkVisualizer.fadeOutMode = "simulationTime"
+*.visualizer.*.physicalLinkVisualizer.fadeOutHalfLife = 15ms
 
 
 
@@ -221,9 +222,10 @@ description = Showing active data links
 # show VoIP data links
 *.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
 *.visualizer.*.dataLinkVisualizer.lineColor = "orange"
-*.visualizer.*.dataLinkVisualizer.lineStyle = "solid"
+*.visualizer.*.dataLinkVisualizer.lineStyle = "dashed"
 *.visualizer.*.dataLinkVisualizer.lineWidth = 4
-*.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 5s
+*.visualizer.*.dataLinkVisualizer.fadeOutMode = "simulationTime"
+*.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 15ms
 
 
 [Config Visualization12]	# Displaying playout delay statistic
@@ -233,6 +235,10 @@ description = Displaying playout delay statistics
 # PARAMETERS
 
 # VISUALIZER
+# turn off propagating signals, because it makes the simulation slow
+*.visualizer.*.mediumVisualizer.displaySignals = false
+*.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 0s
+
 # display playout delay statistic
 *.visualizer.*.statisticVisualizer.signalName = "VoIPPlayoutDelay"
 *.visualizer.*.statisticVisualizer.statisticName = "playoutDelay"
@@ -285,18 +291,21 @@ network = VisualizationC
 *.pedestrianVideo.udpApp[0].serverAddress = "videoStreamServer"
 *.pedestrianVideo.udpApp[0].serverPort = 4000
 # can be changed or can be omitted
-*.pedestrianVideo.udpApp[0].startTime = 7s
+*.pedestrianVideo.udpApp[0].startTime = 5s
 
-# VISUALIZER
+# VISUALIZER voip: 1-31, video: 5-
 # turn off communication and interface ranges
 *.visualizer.*.mediumVisualizer.displayCommunicationRanges = false
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = false
 
 # change displaying VoIP data links to displaying Videostream data links
-*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*Video*"
+*.visualizer.*.dataLinkVisualizer.packetNameFilter = "VideoStrmPk"
+*.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 3ms
+*.visualizer.*.dataLinkVisualizer.lineColor = "green"
+*.visualizer.*.dataLinkVisualizer.lineStyle = "dashed"
 
 # routing table visualizer: routing table entries to videoStreamServer
-*.visualizer.*.routingTableVisualizer.subscriptionModule = "*.pedestrian0"
+*.visualizer.*.routingTableVisualizer.subscriptionModule = "VisualizationC"
 *.visualizer.*.routingTableVisualizer.destinationFilter = "*.videoStreamServer"
 *.visualizer.*.routingTableVisualizer.lineColor = "brown"
 *.visualizer.*.routingTableVisualizer.lineStyle = "solid"
@@ -314,12 +323,15 @@ description = Displaying 802.11 channel access state
 *.visualizer.*.routingTableVisualizer.destinationFilter = ""
 
 # turn off transmissions & receptions
-*.visualizer.*.mediumVisualizer.displayTransmissions = false
-*.visualizer.*.mediumVisualizer.displayReceptions = false
+#*.visualizer.*.mediumVisualizer.displayTransmissions = false
+#*.visualizer.*.mediumVisualizer.displayReceptions = false
 
 # turn off statistic visualizer
 *.visualizer.*.statisticVisualizer.signalName = ""
 *.visualizer.*.statisticVisualizer.statisticName = ""
+
+#turn off ip address
+*.visualizer.*.interfaceTableVisualizer.nodeFilter = ""
 
 # info visualizer parameters: shows channel access state
 *.visualizer.*.infoVisualizer.modules = "*.*.wlan[0].mac.ctn[0]"
@@ -391,26 +403,27 @@ network = VisualizationD
 *.pedestrianVideo.wlan[0].agent.default_ssid = ""
 *.pedestrian1.wlan[0].agent.default_ssid = "inetwifi1"
 
-# VISUALIZER
+# VISUALIZER	voip: 10-40, video: 5-
 # turn off channel access state
 *.visualizer.*.infoVisualizer.modules = ""
-
-# turn on ieee802.11 visualizer: hogy lassam, hogy ki melyik ap-hoz kapcsolodott
-#*.visualizer.*.ieee80211Visualizer.nodeFilter = "**"
 
 # show pedestrians' wlan ip addresses
 *.visualizer.*.interfaceTableVisualizer.nodeFilter = "**"
 *.visualizer.*.interfaceTableVisualizer.interfaceFilter = "wlan*"
 
-# turn off data links
-*.visualizer.*.dataLinkVisualizer.packetNameFilter = ""
+# show VoIP data links
+*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
+*.visualizer.*.dataLinkVisualizer.lineColor = "orange"
+*.visualizer.*.dataLinkVisualizer.lineStyle = "dashed"
+*.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 15ms
 
 # turn on network routes
-*.visualizer.*.networkRouteVisualizer.packetNameFilter = "Video*"
+*.visualizer.*.networkRouteVisualizer.packetNameFilter = "VideoStrmPk"
 *.visualizer.*.networkRouteVisualizer.lineColor = "red"
 *.visualizer.*.networkRouteVisualizer.lineStyle = "solid"
 *.visualizer.*.networkRouteVisualizer.lineWidth = 4
-*.visualizer.*.networkRouteVisualizer.fadeOutHalfLife = 5s
+*.visualizer.*.networkRouteVisualizer.fadeOutMode = "simulationTime"
+*.visualizer.*.networkRouteVisualizer.fadeOutHalfLife = 3ms
 
 
 [Config Visualization16]	# Displaying physical environment
@@ -456,36 +469,41 @@ network = VisualizationF
 *.configurator.config = xmldoc("configurationF.xml")
 
 # car appearance
-*.car[*].osgModel = "car.osgb.20.scale"
-*.car[*].osgModelColor = "red"
+*.car.osgModel = "car.osgb.20.scale"
+*.car.osgModelColor = "green"
 
 # car wlan communication range parameter
-*.car[*].wlan[*].radio.transmitter.power = 0.7mW
+*.car.wlan[*].radio.transmitter.power = 0.7mW
 
 # car mobility parameters
-*.car[*].mobilityType = "VehicleMobility"
-*.car[*].mobility.coordinateSystemModule = "coordinateSystem"
-*.car[*].mobility.updateInterval = 100ms
-*.car[0].mobility.waypointFile = "waypoint1.txt"
-*.car[*].mobility.waypointProximity = 4m
-*.car[*].mobility.speed = 12mps
+*.car.mobilityType = "VehicleMobility"
+*.car.mobility.coordinateSystemModule = "coordinateSystem"
+*.car.mobility.updateInterval = 100ms
+*.car.mobility.waypointFile = "waypoint1.txt"
+*.car.mobility.waypointProximity = 4m
+*.car.mobility.speed = 12mps
 
 # car video stream settings
-*.car[*].numUdpApps = 3
-*.car[*].udpApp[0].typename = "DHCPClient"
-*.car[*].udpApp[1].typename = "UDPVideoStreamCli"
-*.car[*].udpApp[1].localPort = 4000
-*.car[*].udpApp[1].serverAddress = "videoStreamServer"
-*.car[*].udpApp[1].serverPort = 4000
-*.car[*].udpApp[1].startTime = 12s
+*.car.numUdpApps = 3
 
-*.car[*].udpApp[2].typename = "UDPVideoStreamCli"
-*.car[*].udpApp[2].localPort = 3000
-*.car[*].udpApp[2].serverAddress = "videoStreamServer"
-*.car[*].udpApp[2].serverPort = 3000
-*.car[*].udpApp[2].startTime = 18s
+*.car.udpApp[0].typename = "DHCPClient"
 
-*.car[*].wlan[*].agent.default_ssid = ""
+*.car.udpApp[1].typename = "UDPVideoStreamCli"
+*.car.udpApp[1].localPort = 4000
+*.car.udpApp[1].serverAddress = "videoStreamServer"
+*.car.udpApp[1].serverPort = 4000
+*.car.udpApp[1].startTime = 12s
+
+*.car.udpApp[2].typename = "UDPVideoStreamCli"
+*.car.udpApp[2].localPort = 3000
+*.car.udpApp[2].serverAddress = "videoStreamServer"
+*.car.udpApp[2].serverPort = 3000
+*.car.udpApp[2].startTime = 18s
+
+*.car.wlan[*].agent.default_ssid = ""
+
+# modify pedestrianVideo video stream start time
+*.pedestrianVideo.udpApp[0].startTime = 9s
 
 # videoStreamServer application
 *.videoStreamServer.numUdpApps = 2
@@ -538,7 +556,7 @@ network = VisualizationF
 *.router3.dhcp.dns = "192.168.3.1"
 *.router3.dhcp.leaseTime = 3600s
 
-# tcp hosts mobility and tcp application settings
+# tcp hosts mobility settings
 *.tcpHost[*].mobilityType = "StationaryMobility"
 *.tcpHost[*].mobility.coordinateSystemModule = "coordinateSystem"
 *.tcpHost[*].mobility.initialAltitude = 0.5m
@@ -549,32 +567,19 @@ network = VisualizationF
 *.tcpHost[1].mobility.initialLatitude = 42.35332deg
 *.tcpHost[1].mobility.initialLongitude = -71.06455deg
 
-# VISUALIZER
-# turn off propagating signals, because it makes the simulation slow
-*.visualizer.*.mediumVisualizer.displaySignals = false
-*.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 0s
-
-#*.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
-
+# VISUALIZER	voip: 10-40, videoped: 9-, videocar0: 12-, videocar1: 18-
 # obstacle loss visualizer: shows obstacle loss
 *.visualizer.*.obstacleLossVisualizer.displayIntersectionTrail = false
 *.visualizer.*.obstacleLossVisualizer.displayFaceNormalVectorTrail = false
 
-# show VoIP data links
-#*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
-#*.visualizer.*.dataLinkVisualizer.lineColor = "orange"
-#*.visualizer.*.dataLinkVisualizer.lineStyle = "solid"
-#*.visualizer.*.dataLinkVisualizer.lineWidth = 4
-#*.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 5s
-
-# turn on network routes
-*.visualizer.*.networkRouteVisualizer.packetNameFilter = "V*"
+# modify network route fade out
+*.visualizer.*.networkRouteVisualizer.fadeOutHalfLife = 5ms
 
 # visualizer parameters
 *.visualizer.*.packetDropVisualizer.packetNameFilter = "**"
 *.visualizer.*.packetDropVisualizer.iconTintColor = "red"
 *.visualizer.*.packetDropVisualizer.iconTintAmount = 1
-*.visualizer.*.packetDropVisualizer.fadeOutHalfLife = 5s
+*.visualizer.*.packetDropVisualizer.fadeOutMode = "simulationTime"
 
 
 [Config Visualization19]	# Displaying transport connections
@@ -597,9 +602,7 @@ extends = Visualization19
 description = Showing link breaks
 
 # PARAMETERS
-# videoStreamServer
 # makes the simulation faster. If all devices works, maybe turn it on
-#**.tcpHost[0].tcpApp[0].tClose = 0.03s
 **.tcpHost[*].numTcpApps = 0
 
 # VISUALIZER
