--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -45,9 +45,9 @@ network = VisualizationB
 # VISUALIZER
 # display communication and interface ranges
 *.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
-*.visualizer.*.mediumVisualizer.communicationRangeColor = "red"			# 3d-ben nem mukodik
+*.visualizer.*.mediumVisualizer.communicationRangeColor = "red"
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = true
-*.visualizer.*.mediumVisualizer.interferenceRangeColor = "black"			# 3d-ben nem mukodik
+*.visualizer.*.mediumVisualizer.interferenceRangeColor = "black"
 
 
 
@@ -196,13 +196,17 @@ description = Showing active physical links
 # PARAMETERS
 
 # VISUALIZER
+# turn off propagating signals, because it makes the simulation slow
+*.visualizer.*.mediumVisualizer.displaySignals = false
+*.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 0s
+
 # turn off velocity
 *.visualizer.*.mobilityVisualizer.displayVelocity = false
 
 # display physical links
 *.visualizer.*.physicalLinkVisualizer.packetNameFilter = "*VoIP*"
 *.visualizer.*.physicalLinkVisualizer.lineColor = "purple"
-*.visualizer.*.physicalLinkVisualizer.lineStyle = "solid"
+*.visualizer.*.physicalLinkVisualizer.lineStyle = "dotted"
 *.visualizer.*.physicalLinkVisualizer.lineWidth = 4
 *.visualizer.*.physicalLinkVisualizer.fadeOutMode = "simulationTime"
 *.visualizer.*.physicalLinkVisualizer.fadeOutHalfLife = 15ms
@@ -225,7 +229,7 @@ description = Showing active data links
 *.visualizer.*.dataLinkVisualizer.lineStyle = "dashed"
 *.visualizer.*.dataLinkVisualizer.lineWidth = 4
 *.visualizer.*.dataLinkVisualizer.fadeOutMode = "simulationTime"
-*.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 15ms
+*.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 20ms
 
 
 [Config Visualization12]	# Displaying playout delay statistic
@@ -235,10 +239,6 @@ description = Displaying playout delay statistics
 # PARAMETERS
 
 # VISUALIZER
-# turn off propagating signals, because it makes the simulation slow
-*.visualizer.*.mediumVisualizer.displaySignals = false
-*.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 0s
-
 # display playout delay statistic
 *.visualizer.*.statisticVisualizer.signalName = "VoIPPlayoutDelay"
 *.visualizer.*.statisticVisualizer.statisticName = "playoutDelay"
@@ -298,12 +298,6 @@ network = VisualizationC
 *.visualizer.*.mediumVisualizer.displayCommunicationRanges = false
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = false
 
-# change displaying VoIP data links to displaying Videostream data links
-*.visualizer.*.dataLinkVisualizer.packetNameFilter = "VideoStrmPk"
-*.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 3ms
-*.visualizer.*.dataLinkVisualizer.lineColor = "green"
-*.visualizer.*.dataLinkVisualizer.lineStyle = "dashed"
-
 # routing table visualizer: routing table entries to videoStreamServer
 *.visualizer.*.routingTableVisualizer.subscriptionModule = "VisualizationC"
 *.visualizer.*.routingTableVisualizer.destinationFilter = "*.videoStreamServer"
@@ -321,10 +315,6 @@ description = Displaying 802.11 channel access state
 # turn off routing table
 *.visualizer.*.routingTableVisualizer.subscriptionModule = ""
 *.visualizer.*.routingTableVisualizer.destinationFilter = ""
-
-# turn off transmissions & receptions
-#*.visualizer.*.mediumVisualizer.displayTransmissions = false
-#*.visualizer.*.mediumVisualizer.displayReceptions = false
 
 # turn off statistic visualizer
 *.visualizer.*.statisticVisualizer.signalName = ""
@@ -362,7 +352,7 @@ network = VisualizationD
 # pedestrian1 mobility. Changed because we placed a new access point
 *.pedestrian1.mobility.initialX = 615m
 *.pedestrian1.mobility.initialY = 115m
-*.pedestrian1.mobility.constraintAreaMinX = 595m
+*.pedestrian1.mobility.constraintAreaMinX = 590m
 *.pedestrian1.mobility.constraintAreaMinY = 110m
 *.pedestrian1.mobility.constraintAreaMaxX = 620m
 *.pedestrian1.mobility.constraintAreaMaxY = 230m
@@ -412,10 +402,10 @@ network = VisualizationD
 *.visualizer.*.interfaceTableVisualizer.interfaceFilter = "wlan*"
 
 # show VoIP data links
-*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
+*.visualizer.*.dataLinkVisualizer.packetNameFilter = "VoIP"
 *.visualizer.*.dataLinkVisualizer.lineColor = "orange"
 *.visualizer.*.dataLinkVisualizer.lineStyle = "dashed"
-*.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 15ms
+*.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 20ms
 
 # turn on network routes
 *.visualizer.*.networkRouteVisualizer.packetNameFilter = "VideoStrmPk"
@@ -579,7 +569,6 @@ network = VisualizationF
 *.visualizer.*.packetDropVisualizer.packetNameFilter = "**"
 *.visualizer.*.packetDropVisualizer.iconTintColor = "red"
 *.visualizer.*.packetDropVisualizer.iconTintAmount = 1
-*.visualizer.*.packetDropVisualizer.fadeOutMode = "simulationTime"
 
 
 [Config Visualization19]	# Displaying transport connections
@@ -593,6 +582,12 @@ description = Displaying transport connections
 **.tcpHost[1].tcpApp[0].typename = "TCPSinkApp"
 
 # VISUALIZER
+# show VoIP data links
+*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*tcp*"
+*.visualizer.*.dataLinkVisualizer.lineColor = "blue"
+*.visualizer.*.dataLinkVisualizer.lineStyle = "dotted"
+*.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 0.1ms
+
 # transport connection visualizer
 *.visualizer.*.transportConnectionVisualizer.nodeFilter = "**"
 
@@ -602,10 +597,16 @@ extends = Visualization19
 description = Showing link breaks
 
 # PARAMETERS
-# makes the simulation faster. If all devices works, maybe turn it on
-**.tcpHost[*].numTcpApps = 0
+# turn off tcp app
+**.tcpHost[0].tcpApp[0].active = false
 
 # VISUALIZER
+# show VoIP data links
+*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*VoIP*"
+*.visualizer.*.dataLinkVisualizer.lineColor = "orange"
+*.visualizer.*.dataLinkVisualizer.lineStyle = "dashed"
+*.visualizer.*.dataLinkVisualizer.fadeOutHalfLife = 20ms
+
 # link break visualizer parameters
 *.visualizer.*.linkBreakVisualizer.nodeFilter = "**"
 *.visualizer.*.linkBreakVisualizer.fadeOutHalfLife = 5s
@@ -627,9 +628,43 @@ description = Displaying changing routes
 # PARAMETERS
 
 # VISUALIZER
-# show transport connection
-*.visualizer.*.transportConnectionVisualizer.nodeFilter = "**"
 
-# display transmissions & receptions
-*.visualizer.*.mediumVisualizer.displayTransmissions = true
-*.visualizer.*.mediumVisualizer.displayReceptions = true
+
+[Config Visualization23]
+extends = Visualization22
+description = Karacsonyfa
+
+# PARAMETERS
+# turn off tcp app
+**.tcpHost[0].tcpApp[0].active = true
+**.tcpHost[0].tcpApp[0].tClose = 0.05s
+
+# VISUALIZER
+# display communication and interface ranges
+*.visualizer.*.mediumVisualizer.displayCommunicationRanges = true
+*.visualizer.*.mediumVisualizer.communicationRangeColor = "red"
+*.visualizer.*.mediumVisualizer.displayInterferenceRanges = true
+*.visualizer.*.mediumVisualizer.interferenceRangeColor = "black"
+
+# show movements
+*.visualizer.*.mobilityVisualizer.displayVelocity = true
+*.visualizer.*.mobilityVisualizer.velocityLineWidth = 2
+
+# show propagating signals
+*.visualizer.*.mediumVisualizer.displaySignals = true
+*.visualizer.*.mediumVisualizer.signalPropagationUpdateInterval = 50ns
+#*.visualizer.osgVisualizer.mediumVisualizer.signalShape = "ring"
+#*.visualizer.osgVisualizer.mediumVisualizer.signalShape = "sphere"
+*.visualizer.osgVisualizer.mediumVisualizer.signalShape = "both"
+
+# display physical links
+*.visualizer.*.physicalLinkVisualizer.packetNameFilter = "Beacon"
+*.visualizer.*.physicalLinkVisualizer.lineColor = "purple"
+*.visualizer.*.physicalLinkVisualizer.lineStyle = "solid"
+*.visualizer.*.physicalLinkVisualizer.lineWidth = 4
+*.visualizer.*.physicalLinkVisualizer.fadeOutMode = "simulationTime"
+*.visualizer.*.physicalLinkVisualizer.fadeOutHalfLife = 15ms
+
+# obstacle loss visualizer: shows obstacle loss
+*.visualizer.*.obstacleLossVisualizer.displayIntersectionTrail = true
+*.visualizer.*.obstacleLossVisualizer.displayFaceNormalVectorTrail = true
